# mpl-gradients

./: LICENSE.txt  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: tests.yml
examples/: demo.py
mpl_gradients/: __init__.py
tests/: test_gradients.py
